--- a/.github/Custom_Clash.ini
+++ b/.github/Custom_Clash.ini
@@ -1,4 +1,5 @@
 ;https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/Custom_Clash.ini
+;https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/Custom_Clash.ini
 ;全分组防 DNS 泄漏订阅转换模板
 ;作者：https://github.com/Aethersailor
 ;项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules
@@ -11,8 +12,8 @@
 ;建议加入通知频道或群组，谨防失联
 
 [custom]
-ruleset=✈️ 自定义代理,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Proxy.list,28800
-ruleset=🎯 自定义直连,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Direct.list,28800
+ruleset=✈️ 自定义代理,clash-classic:https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/MyRule/Proxy.list,28800
+ruleset=🎯 自定义直连,clash-classic:https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/MyRule/Direct.list,28800
 ;设置规则标志位
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
 ;修改顺序会影响分流效果
@@ -22,15 +23,15 @@ ruleset=🎯 自定义直连,https://raw.githubusercontent.com/superpassby/Custo
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ;本项目收录的直连规则
-ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Direct_Classical.yaml,28800
+ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
 ;本项目收录的代理规则
-ruleset=🚀 手动选择,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Proxy_Classical.yaml,28800
+ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
 ;谷歌在国内可用的域名直连
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
 ;国内游戏域名直连
 ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
 ;Steam 下载 CDN 直连
-ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Steam_CDN_Classical.yaml,28800
+ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,28800
 ;各大游戏平台下载域名直连
 ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
 ;BT Tracker 相关域名直连
@@ -76,7 +77,7 @@ ruleset=🎯 全球直连,[]GEOSITE,cn
 ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
 ;以上兜底规则会根据实际情况随时取消
 ;PT/BT 优化开启会使 80/443 以外端口的流量直连
-ruleset=🔀 非标端口,clash-classic:https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/refs/heads/main/rule/Custom_Port_Direct.yaml,28800
+ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 ;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
 ;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
 ruleset=🐟 漏网之鱼,[]FINAL
